k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: playground
  labels: { app: playground }
spec:
  type: ClusterIP
  selector: { app: playground }
  ports:
  - { name: http, port: 80, targetPort: http }
---
# NodePort versiyonu: minikube üzerinden tarayıcıdan erişmek için
apiVersion: v1
kind: Service
metadata:
  name: playground-np
  namespace: playground
  labels: { app: playground }
spec:
  type: NodePort
  selector: { app: playground }
  ports:
  - { name: http, port: 80, targetPort: http, nodePort: 30080 }
